# stream-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  commit_msg.txt  commit_update_crates.txt  debug_query.sql  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  deploy-build.yml  pre-release.yml  release.yml  test.yml
public/: splash.html
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  build.rs  settings.json  tauri.conf.json
src-tauri/assets/: oauth_error.html  oauth_success.html
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: constants.rs  error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/api/: mod.rs  twitch_api.rs  youtube_api.rs  youtube_live_chat.rs
src-tauri/src/collectors/: auto_discovery.rs  collector_trait.rs  mod.rs  poller.rs  twitch.rs  youtube.rs
src-tauri/src/commands/: analytics.rs  channels.rs  chat.rs  config.rs  data_science.rs  database.rs  discovery.rs  export.rs  game_categories.rs  irc.rs  logs.rs  mod.rs  multiview.rs  oauth.rs  sql.rs  stats.rs  stronghold.rs  system.rs  timeline.rs  twitch.rs  utils.rs  window.rs
src-tauri/src/config/: credentials.rs  keyring_store.rs  mod.rs  settings.rs  stronghold_store.rs
src-tauri/src/database/: aggregation.rs  analytics.rs  chat_analytics.rs  data_science_analytics.rs  mod.rs  models.rs  query_helpers.rs  schema.rs  utils.rs  writer.rs
src-tauri/src/database/repositories/: aggregation_repository.rs  base.rs  channel_repository.rs  chat_message_repository.rs  game_category_repository.rs  mod.rs  multiview_repository.rs  stream_stats_repository.rs
src-tauri/src/oauth/: mod.rs  server.rs  twitch.rs  youtube.rs
src-tauri/src/websocket/: twitch_irc.rs
src/api/: channels.ts  config.ts  discovery.ts  export.ts  gameCategories.ts  multiview.ts  sql.ts  statistics.ts  streams.ts  system.ts
src/components/ChannelList/: ChannelEditForm.tsx  ChannelForm.tsx  ChannelItem.tsx  index.tsx
src/components/Dashboard/: index.tsx
src/components/Export/: ExportForm.tsx  index.tsx
src/components/Logs/: index.tsx
src/components/MultiView/: EventTimeline.tsx  MultiViewTile.tsx  MultiViewToolbar.tsx  index.tsx
src/components/SQL/: index.tsx
src/components/Settings/: AutoDiscoveryForm.tsx  GameCategoryManager.tsx  OAuthConfigForm.tsx  OAuthLogin.tsx  TokenForm.tsx  TwitchAuthPanel.tsx  VaultSetupDialog.tsx  VaultUnlockDialog.tsx  index.tsx
src/components/Statistics/: BroadcasterAnalytics.tsx  ChannelDetailAnalytics.tsx  ChannelStatistics.tsx  ChatAnalysis.tsx  DataAvailabilityBanner.tsx  DateRangePicker.tsx  GameAnalytics.tsx  GameDetailAnalytics.tsx  StreamSessionView.tsx  TopChannelsAnalytics.tsx  TopGamesAnalytics.tsx  index.tsx
src/components/Statistics/ChatAnalytics/: ChatterBehaviorTab.tsx  EngagementTab.tsx  TimePatternTab.tsx  UserSegmentTab.tsx  index.tsx
src/components/Timeline/: ChatTimelinePanel.tsx  ComparisonChart.tsx  ComparisonSelector.tsx  EventMarkers.tsx  StreamSelector.tsx  StreamSummary.tsx  TimelineChart.tsx  TimelineWithChat.tsx  index.tsx  utils.ts
src/components/common/: ConfirmDialog.tsx  DatabaseErrorDialog.tsx  DesktopAppNotice.tsx  DonationModal.tsx  ErrorBoundary.tsx  ErrorState.tsx  LoadingSpinner.tsx  LoadingState.tsx  OAuthWarningBanner.tsx  Skeleton.tsx  SortableTableHeader.tsx  SplashScreen.tsx  Toast.tsx  Tooltip.tsx  index.ts
src/contexts/: NavigationContext.tsx
src/hooks/: useAnalytics.ts  useFormatting.ts  useSortableData.ts
src/schemas/: analytics.ts  channel.ts  chat.ts  config.ts  dataScience.ts  discovery.ts  export.ts  gameCategory.ts  index.ts  multiview.ts  sql.ts  stream.ts
src/stores/: appStateStore.ts  channelStore.ts  configStore.ts  confirmStore.ts  themeStore.ts  toastStore.ts
src/types/: index.ts
src/utils/: confirm.ts  keyring.ts  stronghold.ts  toast.ts
(+14 files in other folders)
