[package]
name = "stream-stats-collector"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stream_stats_collector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-keyring = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
duckdb = { version = "1.4", features = ["bundled"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
# Twitch API libraries
twitch_api = { version = "0.7.2", features = ["helix", "client", "reqwest", "twitch_oauth2"] }
twitch_oauth2 = { version = "0.16", features = ["reqwest"] }
# YouTube API library
google-youtube3 = "7"
yup-oauth2 = "12"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
# WebSocket libraries
tungstenite = { version = "0.28", features = ["native-tls"] }
thiserror = "2.0.18"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
# JSON export uses existing serde_json dependency
# Workaround for upstream scrypt bug
[profile.dev.package.scrypt]
opt-level = 3

# Test dependencies
[dev-dependencies]
tempfile = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

